--- a/Portfolio/src/pages/GradientText.css
+++ b/Portfolio/src/pages/GradientText.css
@@ -6,12 +6,14 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  border-radius: 1.25rem;
-  font-weight: 500;
+  border-radius: 0.25rem;
+  font-weight: 700;
+  font-size: 60px;
   backdrop-filter: blur(10px);
   transition: box-shadow 0.5s ease-out;
   overflow: hidden;
   cursor: pointer;
+
 }
 
 .gradient-overlay {
